--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .App {
+  padding-top: 5rem;
+  margin: 0 auto;
+  width: 600px;
   text-align: center;
 }
 
@@ -15,17 +18,12 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
